--- a/English.lproj/PreferencePane.xib
+++ b/English.lproj/PreferencePane.xib
@@ -9,7 +9,6 @@
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
 			<integer value="129"/>
-			<integer value="10"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -38,21 +37,21 @@
 			<object class="NSWindowTemplate" id="1005">
 				<int key="NSWindowStyleMask">15</int>
 				<int key="NSWindowBacking">2</int>
-				<string key="NSWindowRect">{{196, 43}, {668, 467}}</string>
+				<string key="NSWindowRect">{{196, 37}, {668, 473}}</string>
 				<int key="NSWTFlags">1610612736</int>
 				<string type="base64-UTF8" key="NSWindowTitle">PDxkbyBub3QgbG9jYWxpemU+Pg</string>
 				<string key="NSWindowClass">NSWindow</string>
 				<nil key="NSViewClass"/>
 				<string key="NSWindowContentMaxSize">{3.40282e+38, 3.40282e+38}</string>
 				<object class="NSView" key="NSWindowView" id="1006">
-					<reference key="NSNextResponder"/>
+					<nil key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<object class="NSMutableArray" key="NSSubviews">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSTabView" id="995182996">
 							<reference key="NSNextResponder" ref="1006"/>
 							<int key="NSvFlags">12</int>
-							<string key="NSFrame">{{13, 10}, {642, 451}}</string>
+							<string key="NSFrame">{{13, 10}, {642, 457}}</string>
 							<reference key="NSSuperview" ref="1006"/>
 							<object class="NSMutableArray" key="NSTabViewItems">
 								<bool key="EncodedWithXMLCoder">YES</bool>
@@ -66,13 +65,13 @@
 											<object class="NSTextField" id="491049602">
 												<reference key="NSNextResponder" ref="79366982"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{14, 370}, {121, 17}}</string>
+												<string key="NSFrame">{{21, 373}, {59, 17}}</string>
 												<reference key="NSSuperview" ref="79366982"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="484492700">
 													<int key="NSCellFlags">68288064</int>
 													<int key="NSCellFlags2">272630784</int>
-													<string key="NSContents">Installed Version:</string>
+													<string key="NSContents">Version:</string>
 													<object class="NSFont" key="NSSupport" id="1035463203">
 														<string key="NSName">LucidaGrande-Bold</string>
 														<double key="NSSize">1.300000e+01</double>
@@ -102,7 +101,7 @@
 											<object class="NSTextField" id="677126506">
 												<reference key="NSNextResponder" ref="79366982"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{137, 370}, {471, 17}}</string>
+												<string key="NSFrame">{{82, 373}, {519, 17}}</string>
 												<reference key="NSSuperview" ref="79366982"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="914843381">
@@ -122,7 +121,7 @@
 											<object class="NSTextField" id="476872960">
 												<reference key="NSNextResponder" ref="79366982"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{160, 295}, {448, 17}}</string>
+												<string key="NSFrame">{{105, 298}, {496, 17}}</string>
 												<reference key="NSSuperview" ref="79366982"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="978875157">
@@ -138,7 +137,7 @@
 											<object class="NSButton" id="320369754">
 												<reference key="NSNextResponder" ref="79366982"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{134, 328}, {96, 32}}</string>
+												<string key="NSFrame">{{79, 331}, {96, 32}}</string>
 												<reference key="NSSuperview" ref="79366982"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSButtonCell" key="NSCell" id="147659159">
@@ -158,7 +157,7 @@
 											<object class="NSButton" id="201712548">
 												<reference key="NSNextResponder" ref="79366982"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{230, 328}, {150, 32}}</string>
+												<string key="NSFrame">{{175, 331}, {150, 32}}</string>
 												<reference key="NSSuperview" ref="79366982"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSButtonCell" key="NSCell" id="986067745">
@@ -178,7 +177,7 @@
 											<object class="NSButton" id="468146727">
 												<reference key="NSNextResponder" ref="79366982"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{134, 253}, {96, 32}}</string>
+												<string key="NSFrame">{{79, 256}, {96, 32}}</string>
 												<reference key="NSSuperview" ref="79366982"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSButtonCell" key="NSCell" id="205416574">
@@ -198,7 +197,7 @@
 											<object class="NSButton" id="550045743">
 												<reference key="NSNextResponder" ref="79366982"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{133, 9}, {101, 32}}</string>
+												<string key="NSFrame">{{78, 12}, {101, 32}}</string>
 												<reference key="NSSuperview" ref="79366982"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSButtonCell" key="NSCell" id="52409275">
@@ -219,7 +218,7 @@
 												<reference key="NSNextResponder" ref="79366982"/>
 												<int key="NSvFlags">1292</int>
 												<object class="NSPSMatrix" key="NSDrawMatrix"/>
-												<string key="NSFrame">{{382, 338}, {16, 16}}</string>
+												<string key="NSFrame">{{327, 341}, {16, 16}}</string>
 												<reference key="NSSuperview" ref="79366982"/>
 												<int key="NSpiFlags">28938</int>
 												<double key="NSMinValue">1.600000e+01</double>
@@ -228,7 +227,7 @@
 											<object class="NSTextField" id="950576378">
 												<reference key="NSNextResponder" ref="79366982"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{86, 295}, {49, 17}}</string>
+												<string key="NSFrame">{{31, 298}, {49, 17}}</string>
 												<reference key="NSSuperview" ref="79366982"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="665161254">
@@ -244,7 +243,7 @@
 											<object class="NSTextField" id="93974944">
 												<reference key="NSNextResponder" ref="79366982"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{103, 185}, {32, 17}}</string>
+												<string key="NSFrame">{{48, 188}, {32, 17}}</string>
 												<reference key="NSSuperview" ref="79366982"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="257180405">
@@ -272,7 +271,7 @@
 														<string>NeXT TIFF v4.0 pasteboard type</string>
 													</object>
 												</object>
-												<string key="NSFrame">{{139, 295}, {16, 16}}</string>
+												<string key="NSFrame">{{84, 298}, {16, 16}}</string>
 												<reference key="NSSuperview" ref="79366982"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSImageCell" key="NSCell" id="185461308">
@@ -292,7 +291,7 @@
 											<object class="NSButton" id="961713549">
 												<reference key="NSNextResponder" ref="79366982"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{138, 228}, {197, 18}}</string>
+												<string key="NSFrame">{{83, 231}, {197, 18}}</string>
 												<reference key="NSSuperview" ref="79366982"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSButtonCell" key="NSCell" id="855974684">
@@ -329,7 +328,7 @@
 															<object class="NSTableView" id="312857101">
 																<reference key="NSNextResponder" ref="849754461"/>
 																<int key="NSvFlags">256</int>
-																<string key="NSFrameSize">{434, 150}</string>
+																<string key="NSFrameSize">{511, 150}</string>
 																<reference key="NSSuperview" ref="849754461"/>
 																<bool key="NSEnabled">YES</bool>
 																<object class="_NSCornerView" key="NSCornerView">
@@ -340,7 +339,7 @@
 																<object class="NSMutableArray" key="NSTableColumns">
 																	<bool key="EncodedWithXMLCoder">YES</bool>
 																	<object class="NSTableColumn" id="527340203">
-																		<double key="NSWidth">4.310000e+02</double>
+																		<double key="NSWidth">5.080000e+02</double>
 																		<double key="NSMinWidth">4.000000e+01</double>
 																		<double key="NSMaxWidth">1.000000e+03</double>
 																		<object class="NSTableHeaderCell" key="NSHeaderCell">
@@ -409,9 +408,8 @@
 																<bool key="NSAllowsTypeSelect">NO</bool>
 															</object>
 														</object>
-														<string key="NSFrame">{{1, 1}, {434, 150}}</string>
+														<string key="NSFrame">{{1, 1}, {511, 150}}</string>
 														<reference key="NSSuperview" ref="533230888"/>
-														<reference key="NSNextKeyView" ref="312857101"/>
 														<reference key="NSDocView" ref="312857101"/>
 														<reference key="NSBGColor" ref="466065004"/>
 														<int key="NScvFlags">4</int>
@@ -436,9 +434,8 @@
 														<double key="NSPercent">9.955357e-01</double>
 													</object>
 												</object>
-												<string key="NSFrame">{{140, 50}, {436, 152}}</string>
+												<string key="NSFrame">{{85, 53}, {513, 152}}</string>
 												<reference key="NSSuperview" ref="79366982"/>
-												<reference key="NSNextKeyView" ref="849754461"/>
 												<int key="NSsFlags">530</int>
 												<reference key="NSVScroller" ref="383002230"/>
 												<reference key="NSHScroller" ref="98866425"/>
@@ -446,7 +443,7 @@
 												<bytes key="NSScrollAmts">QSAAAEEgAABBcAAAQXAAAA</bytes>
 											</object>
 										</object>
-										<string key="NSFrame">{{10, 33}, {622, 405}}</string>
+										<string key="NSFrame">{{10, 33}, {622, 411}}</string>
 										<reference key="NSSuperview" ref="995182996"/>
 									</object>
 									<string key="NSLabel">Status</string>
@@ -463,7 +460,7 @@
 											<object class="NSPopUpButton" id="180669553">
 												<reference key="NSNextResponder" ref="265851423"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{146, 365}, {247, 26}}</string>
+												<string key="NSFrame">{{154, 371}, {247, 26}}</string>
 												<reference key="NSSuperview" ref="265851423"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSPopUpButtonCell" key="NSCell" id="57760412">
@@ -535,7 +532,7 @@
 											<object class="NSTextField" id="270178414">
 												<reference key="NSNextResponder" ref="265851423"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{105, 370}, {39, 17}}</string>
+												<string key="NSFrame">{{113, 376}, {39, 17}}</string>
 												<reference key="NSSuperview" ref="265851423"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="370218560">
@@ -551,7 +548,7 @@
 											<object class="NSTextField" id="642232225">
 												<reference key="NSNextResponder" ref="265851423"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{43, 320}, {101, 17}}</string>
+												<string key="NSFrame">{{51, 326}, {101, 17}}</string>
 												<reference key="NSSuperview" ref="265851423"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="485995074">
@@ -567,7 +564,7 @@
 											<object class="NSTextField" id="728888340">
 												<reference key="NSNextResponder" ref="265851423"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{75, 255}, {69, 17}}</string>
+												<string key="NSFrame">{{83, 261}, {69, 17}}</string>
 												<reference key="NSSuperview" ref="265851423"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="81932716">
@@ -583,7 +580,7 @@
 											<object class="NSTextField" id="1052099743">
 												<reference key="NSNextResponder" ref="265851423"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{149, 318}, {50, 22}}</string>
+												<string key="NSFrame">{{157, 324}, {50, 22}}</string>
 												<reference key="NSSuperview" ref="265851423"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="713420136">
@@ -610,7 +607,7 @@
 											<object class="NSTextField" id="801096213">
 												<reference key="NSNextResponder" ref="265851423"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{228, 320}, {217, 17}}</string>
+												<string key="NSFrame">{{236, 326}, {217, 17}}</string>
 												<reference key="NSSuperview" ref="265851423"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="642484074">
@@ -641,7 +638,7 @@
 														<string>NeXT TIFF v4.0 pasteboard type</string>
 													</object>
 												</object>
-												<string key="NSFrame">{{207, 320}, {16, 16}}</string>
+												<string key="NSFrame">{{215, 326}, {16, 16}}</string>
 												<reference key="NSSuperview" ref="265851423"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSImageCell" key="NSCell" id="335625859">
@@ -670,7 +667,7 @@
 														<string>NeXT TIFF v4.0 pasteboard type</string>
 													</object>
 												</object>
-												<string key="NSFrame">{{148, 255}, {16, 16}}</string>
+												<string key="NSFrame">{{156, 261}, {16, 16}}</string>
 												<reference key="NSSuperview" ref="265851423"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSImageCell" key="NSCell" id="312024434">
@@ -687,7 +684,7 @@
 											<object class="NSButton" id="785455980">
 												<reference key="NSNextResponder" ref="265851423"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{147, 294}, {168, 18}}</string>
+												<string key="NSFrame">{{155, 300}, {168, 18}}</string>
 												<reference key="NSSuperview" ref="265851423"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSButtonCell" key="NSCell" id="343689616">
@@ -709,7 +706,7 @@
 											<object class="NSTextField" id="261757900">
 												<reference key="NSNextResponder" ref="265851423"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{169, 255}, {367, 17}}</string>
+												<string key="NSFrame">{{177, 261}, {367, 17}}</string>
 												<reference key="NSSuperview" ref="265851423"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="533269391">
@@ -725,7 +722,7 @@
 											<object class="NSButton" id="964527142">
 												<reference key="NSNextResponder" ref="265851423"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{355, 215}, {211, 32}}</string>
+												<string key="NSFrame">{{363, 221}, {211, 32}}</string>
 												<reference key="NSSuperview" ref="265851423"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSButtonCell" key="NSCell" id="62089199">
@@ -745,7 +742,7 @@
 											<object class="NSButton" id="800207163">
 												<reference key="NSNextResponder" ref="265851423"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{143, 215}, {212, 32}}</string>
+												<string key="NSFrame">{{151, 221}, {212, 32}}</string>
 												<reference key="NSSuperview" ref="265851423"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSButtonCell" key="NSCell" id="699420461">
@@ -763,7 +760,7 @@
 												</object>
 											</object>
 										</object>
-										<string key="NSFrame">{{10, 33}, {622, 405}}</string>
+										<string key="NSFrame">{{10, 33}, {622, 411}}</string>
 									</object>
 									<string key="NSLabel">Settings</string>
 									<reference key="NSColor" ref="781922329"/>
@@ -781,8 +778,7 @@
 							</object>
 						</object>
 					</object>
-					<string key="NSFrameSize">{668, 467}</string>
-					<reference key="NSSuperview"/>
+					<string key="NSFrameSize">{668, 473}</string>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1680, 1028}}</string>
 				<string key="NSMaxSize">{3.40282e+38, 3.40282e+38}</string>
@@ -1989,10 +1985,10 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{224, 119}, {668, 467}}</string>
+					<string>{{224, 113}, {668, 473}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<boolean value="NO" id="6"/>
-					<string>{{224, 119}, {668, 467}}</string>
+					<string>{{224, 113}, {668, 473}}</string>
 					<reference ref="6"/>
 					<string>{196, 240}</string>
 					<string>{{357, 418}, {480, 270}}</string>
