--- a/English.lproj/PreferencePane.xib
+++ b/English.lproj/PreferencePane.xib
@@ -347,7 +347,7 @@
 																			<int key="NSCellFlags">75628032</int>
 																			<int key="NSCellFlags2">0</int>
 																			<string key="NSContents"/>
-																			<object class="NSFont" key="NSSupport">
+																			<object class="NSFont" key="NSSupport" id="26">
 																				<string key="NSName">LucidaGrande</string>
 																				<double key="NSSize">1.100000e+01</double>
 																				<int key="NSfFlags">3100</int>
@@ -915,6 +915,25 @@
 								<int key="NSPeriodicInterval">25</int>
 							</object>
 						</object>
+						<object class="NSTextField" id="659702071">
+							<reference key="NSNextResponder" ref="364827739"/>
+							<int key="NSvFlags">-2147483380</int>
+							<string key="NSFrame">{{17, 23}, {109, 14}}</string>
+							<reference key="NSSuperview" ref="364827739"/>
+							<bool key="NSEnabled">YES</bool>
+							<object class="NSTextFieldCell" key="NSCell" id="464922091">
+								<int key="NSCellFlags">68288064</int>
+								<int key="NSCellFlags2">272761856</int>
+								<string key="NSContents">Password Mismatch</string>
+								<reference key="NSSupport" ref="26"/>
+								<reference key="NSControlView" ref="659702071"/>
+								<reference key="NSBackgroundColor" ref="781922329"/>
+								<object class="NSColor" key="NSTextColor">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MC41MDQwMzIyNQA</bytes>
+								</object>
+							</object>
+						</object>
 					</object>
 					<string key="NSFrameSize">{449, 134}</string>
 					<reference key="NSSuperview"/>
@@ -1253,6 +1272,14 @@
 						<reference key="destination" ref="964527142"/>
 					</object>
 					<int key="connectionID">148</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">_passwordMismatchTextField</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="659702071"/>
+					</object>
+					<int key="connectionID">153</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -1794,6 +1821,7 @@
 							<reference ref="804444381"/>
 							<reference ref="325730820"/>
 							<reference ref="779232495"/>
+							<reference ref="659702071"/>
 						</object>
 						<reference key="parent" ref="871528539"/>
 					</object>
@@ -1881,6 +1909,20 @@
 						<reference key="object" ref="917111366"/>
 						<reference key="parent" ref="779232495"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">151</int>
+						<reference key="object" ref="659702071"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="464922091"/>
+						</object>
+						<reference key="parent" ref="364827739"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">152</int>
+						<reference key="object" ref="464922091"/>
+						<reference key="parent" ref="659702071"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -1931,6 +1973,8 @@
 					<string>140.IBPluginDependency</string>
 					<string>141.IBPluginDependency</string>
 					<string>15.IBPluginDependency</string>
+					<string>151.IBPluginDependency</string>
+					<string>152.IBPluginDependency</string>
 					<string>16.IBPluginDependency</string>
 					<string>19.IBPluginDependency</string>
 					<string>2.IBPluginDependency</string>
@@ -2033,6 +2077,8 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<object class="NSMutableArray">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 					</object>
@@ -2106,7 +2152,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">148</int>
+			<int key="maxID">153</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -2165,6 +2211,7 @@
 							<string>_logTableView</string>
 							<string>_newPasswordTextField</string>
 							<string>_openLogButton</string>
+							<string>_passwordMismatchTextField</string>
 							<string>_passwordPanel</string>
 							<string>_portStatusImageView</string>
 							<string>_portStatusTextField</string>
@@ -2191,6 +2238,7 @@
 							<string>NSTableView</string>
 							<string>NSSecureTextField</string>
 							<string>NSButton</string>
+							<string>NSTextField</string>
 							<string>NSPanel</string>
 							<string>NSImageView</string>
 							<string>NSTextField</string>
