--- a/English.lproj/PreferencePane.xib
+++ b/English.lproj/PreferencePane.xib
@@ -8,7 +8,7 @@
 		<string key="IBDocument.HIToolboxVersion">353.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="7"/>
+			<integer value="2"/>
 			<integer value="129"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
@@ -567,7 +567,7 @@
 											<object class="NSTextField" id="728888340">
 												<reference key="NSNextResponder" ref="265851423"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{83, 263}, {69, 17}}</string>
+												<string key="NSFrame">{{83, 224}, {69, 17}}</string>
 												<reference key="NSSuperview" ref="265851423"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="81932716">
@@ -583,7 +583,7 @@
 											<object class="NSTextField" id="1072395445">
 												<reference key="NSNextResponder" ref="265851423"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{101, 188}, {51, 17}}</string>
+												<string key="NSFrame">{{101, 149}, {51, 17}}</string>
 												<reference key="NSSuperview" ref="265851423"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="141468667">
@@ -686,7 +686,7 @@
 														<string>NeXT TIFF v4.0 pasteboard type</string>
 													</object>
 												</object>
-												<string key="NSFrame">{{156, 263}, {16, 16}}</string>
+												<string key="NSFrame">{{156, 224}, {16, 16}}</string>
 												<reference key="NSSuperview" ref="265851423"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSImageCell" key="NSCell" id="312024434">
@@ -703,7 +703,7 @@
 											<object class="NSTextField" id="261757900">
 												<reference key="NSNextResponder" ref="265851423"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{177, 263}, {394, 17}}</string>
+												<string key="NSFrame">{{177, 224}, {394, 17}}</string>
 												<reference key="NSSuperview" ref="265851423"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="533269391">
@@ -719,7 +719,7 @@
 											<object class="NSButton" id="964527142">
 												<reference key="NSNextResponder" ref="265851423"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{363, 223}, {211, 32}}</string>
+												<string key="NSFrame">{{363, 184}, {211, 32}}</string>
 												<reference key="NSSuperview" ref="265851423"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSButtonCell" key="NSCell" id="62089199">
@@ -739,7 +739,7 @@
 											<object class="NSButton" id="800207163">
 												<reference key="NSNextResponder" ref="265851423"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{151, 223}, {212, 32}}</string>
+												<string key="NSFrame">{{151, 184}, {212, 32}}</string>
 												<reference key="NSSuperview" ref="265851423"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSButtonCell" key="NSCell" id="699420461">
@@ -759,7 +759,7 @@
 											<object class="NSButton" id="812654401">
 												<reference key="NSNextResponder" ref="265851423"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{151, 178}, {149, 32}}</string>
+												<string key="NSFrame">{{151, 139}, {149, 32}}</string>
 												<reference key="NSSuperview" ref="265851423"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSButtonCell" key="NSCell" id="791351621">
@@ -779,7 +779,7 @@
 											<object class="NSButton" id="454875007">
 												<reference key="NSNextResponder" ref="265851423"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{300, 178}, {150, 32}}</string>
+												<string key="NSFrame">{{300, 139}, {150, 32}}</string>
 												<reference key="NSSuperview" ref="265851423"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSButtonCell" key="NSCell" id="63380967">
@@ -799,7 +799,7 @@
 											<object class="NSTextField" id="901811208">
 												<reference key="NSNextResponder" ref="265851423"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{154, 163}, {369, 14}}</string>
+												<string key="NSFrame">{{154, 124}, {369, 14}}</string>
 												<reference key="NSSuperview" ref="265851423"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="144945668">
@@ -815,7 +815,7 @@
 											<object class="NSTextField" id="284541697">
 												<reference key="NSNextResponder" ref="265851423"/>
 												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{154, 302}, {246, 14}}</string>
+												<string key="NSFrame">{{154, 266}, {246, 14}}</string>
 												<reference key="NSSuperview" ref="265851423"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="372329773">
@@ -826,6 +826,26 @@
 													<reference key="NSControlView" ref="284541697"/>
 													<reference key="NSBackgroundColor" ref="781922329"/>
 													<reference key="NSTextColor" ref="896598823"/>
+												</object>
+											</object>
+											<object class="NSButton" id="103122228">
+												<reference key="NSNextResponder" ref="265851423"/>
+												<int key="NSvFlags">268</int>
+												<string key="NSFrame">{{150, 284}, {149, 32}}</string>
+												<reference key="NSSuperview" ref="265851423"/>
+												<bool key="NSEnabled">YES</bool>
+												<object class="NSButtonCell" key="NSCell" id="367460022">
+													<int key="NSCellFlags">67239424</int>
+													<int key="NSCellFlags2">134217728</int>
+													<string key="NSContents">Check Port Again</string>
+													<reference key="NSSupport" ref="72208873"/>
+													<reference key="NSControlView" ref="103122228"/>
+													<int key="NSButtonFlags">-2038284033</int>
+													<int key="NSButtonFlags2">129</int>
+													<string key="NSAlternateContents"/>
+													<string key="NSKeyEquivalent"/>
+													<int key="NSPeriodicDelay">200</int>
+													<int key="NSPeriodicInterval">25</int>
 												</object>
 											</object>
 										</object>
@@ -1331,6 +1351,14 @@
 					</object>
 					<int key="connectionID">153</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">checkPortAgain:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="103122228"/>
+					</object>
+					<int key="connectionID">172</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -1428,6 +1456,7 @@
 							<reference ref="454875007"/>
 							<reference ref="901811208"/>
 							<reference ref="261757900"/>
+							<reference ref="103122228"/>
 							<reference ref="284541697"/>
 						</object>
 						<reference key="parent" ref="355731844"/>
@@ -2033,6 +2062,20 @@
 						<reference key="object" ref="372329773"/>
 						<reference key="parent" ref="284541697"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">170</int>
+						<reference key="object" ref="103122228"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="367460022"/>
+						</object>
+						<reference key="parent" ref="265851423"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">171</int>
+						<reference key="object" ref="367460022"/>
+						<reference key="parent" ref="103122228"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -2096,6 +2139,8 @@
 					<string>165.IBPluginDependency</string>
 					<string>166.IBPluginDependency</string>
 					<string>167.IBPluginDependency</string>
+					<string>170.IBPluginDependency</string>
+					<string>171.IBPluginDependency</string>
 					<string>19.IBPluginDependency</string>
 					<string>2.IBPluginDependency</string>
 					<string>2.IBUserGuides</string>
@@ -2207,6 +2252,8 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<object class="NSMutableArray">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 					</object>
@@ -2278,7 +2325,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">167</int>
+			<int key="maxID">172</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -2297,8 +2344,8 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSMutableArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>automaticallyMapPort:</string>
 							<string>checkForUpdate:</string>
+							<string>checkPortAgain:</string>
 							<string>createNewAdminUser:</string>
 							<string>install:</string>
 							<string>launchAutomatically:</string>
@@ -2334,6 +2381,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>_accountStatusImageView</string>
 							<string>_accountStatusTextField</string>
+							<string>_checkPortAgain</string>
 							<string>_createNewAdminUserButton</string>
 							<string>_filesMenuItem</string>
 							<string>_filesPopUpButton</string>
@@ -2360,6 +2408,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>NSImageView</string>
 							<string>NSTextField</string>
+							<string>NSButton</string>
 							<string>NSButton</string>
 							<string>NSMenuItem</string>
 							<string>NSPopUpButton</string>
